Fix build

Summary:
3b69ac3a7aff broke the build on the CI:
  06:57:49 [ 42%] Building CXX object src/CMakeFiles/spectacle.dir/Gui/KSWidget.cpp.o
  06:57:50 /usr/home/jenkins/workspace/Applications spectacle kf5-qt5 FreeBSDQt5.9/src/Gui/KSMainWindow.cpp:91:9: error: unknown type name 'xcb_intern_atom_cookie_t'

BUG: 391504

Reviewers: rkflx, #spectacle

Reviewed By: rkflx, #spectacle

Subscribers: rkflx

Differential Revision: https://phabricator.kde.org/D11110